--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.0"
   },
   "scripts": {
